# GigaEngine

./: .gitignore  CMakeLists.txt  Jav_main.cpp  LICENSE.txt  README.md
EngineFiles/Engine/: Screen.h  Transform.h
EngineFiles/Engine/Component/: ComponentExceptions.h
EngineFiles/Engine/Component/Rendering/: Camera.h  Mesh.h  Renderer.h  Shader.h  Vertex.h
EngineFiles/Engine/Component/Transform/: DirtyTransform.h  LocalToWorldMatrix.h  Rotation.h  Scale.h  Translation.h  UniformScale.h
EngineFiles/Engine/Entity/: EntityList.h  EntityManager.h
EngineFiles/Engine/Systems/BuiltIn/: MatrixSystem.h  RenderSystem.h
GigaEngine/: .gitignore  GigaEngine.sln  GigaEngine.vcxproj  GigaEngine.vcxproj.filters  Main.cpp  MaterialProperty.cpp  MaterialProperty.h
GigaEngine/EngineFiles/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Material.h  Mesh.h  Movement.cpp  Movement.h  Transform.cpp  Transform.h  Vertex.h  glad.c
GigaEngine/Includes/glad/: glad.h
GigaEngine/Libraries/: rttr_core.lib  rttr_core_d.lib
include/glad/: glad.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/glfw-3.3.2/docs/: CONTRIBUTING.md
lib/glfw-3.3.2/docs/html/: modules.html
lib/glfw-3.3.2/src/: input.c  x11_init.c
lib/glm/: common.hpp
lib/rttr/: CMakeLists.txt
lib/rttr-lin/: CMakeLists.txt
lib/rttr-lin/CMake/: utility.cmake
lib/rttr-lin/doc/md_pages/: main_page.md
lib/rttr/cmake/: rttr-config-relwithdebinfo.cmake  rttr-config.cmake
lib/rttr/doc/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  ComponentBase.h  ComponentList.cpp  ComponentList.h  ComponentManager.cpp  ComponentManager.h  ComponentTest.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityBase.cpp  EntityBase.h  EntityComponents.h  EntityList.cpp  EntityList.h  EntityManager.cpp  EntityManager.h  Graphics.cpp  Graphics.h  LocalToWorldMatrix.h  MatrixSystem.cpp  MatrixSystem.h  Mesh.cpp  Mesh.h  RenderSystem.cpp  RenderSystem.h  Renderer.h  RotateTestSystem.cpp  RotateTestSystem.h  Rotation.h  Scale.h  Shader.cpp  Shader.h  System.h  SystemBase.h  (+4 more)
src/Engine/: Engine.cpp  Engine.h  EventManager.h  Math.h  Quadtree.cpp  Quadtree.h  RenderBounds.h  Screen.cpp  Screen.h  Time.cpp  Time.h  World.cpp  World.h
src/Engine/Component/: Component.h  ComponentExceptions.h  ComponentList.h  ComponentManager.h  ComponentTest.h
src/Engine/Entity/: Entity.h  EntityBase.cpp  EntityBase.h  EntityList.cpp  EntityList.h  EntityManager.cpp  EntityManager.h  EntityReferenceList.cpp  EntityReferenceList.h
src/Engine/Systems/: SystemBase.cpp  SystemBase.h  SystemManager.cpp  SystemManager.h
src/Engine/Tag/: TagBase.h  TagList.h  TagManager.h
src/Shaders/: shader.fs  shader.vs
